objects/ASI_CRM_KA_Account__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Apply_National_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply National Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Auto_link_to_PO_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-link to PO Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BRSF_Methodology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BRSF Methodology</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Methodology__c.ASI_CRM_Type__c</field>
                <operation>equals</operation>
                <value>BRSF</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Methodology__c</referenceTo>
        <relationshipLabel>KA Accounts</relationshipLabel>
        <relationshipName>KA_Accounts_BRSF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BRSF_Unit__c</fullName>
        <label>BRSF Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_BRSF_Volume_Base__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Std. Btl.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_BRSF_Volume_Base__c</fullName>
        <label>BRSF Volume Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Sub-Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_TP_Is_SpecialBanner_For_South__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Special Banner For South</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Chi_Name__c</fullName>
        <label>Chi Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>HQ/Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Local_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_National_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Meth_Mod1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSF Methodology (Module 1)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Methodology__c.ASI_CRM_Type__c</field>
                <operation>equals</operation>
                <value>PSF</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Methodology__c</referenceTo>
        <relationshipLabel>KA Accounts (PSF Methodology (Module 1))</relationshipLabel>
        <relationshipName>KA_Accounts_PSF1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Meth_Mod2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSF Methodology (Module 2)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Methodology__c.ASI_CRM_Type__c</field>
                <operation>equals</operation>
                <value>PSF</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Methodology__c</referenceTo>
        <relationshipLabel>KA Accounts (PSF Methodology (Module 2))</relationshipLabel>
        <relationshipName>KA_Accounts_PSF2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Meth_Mod3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSF Methodology (Module 3)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Methodology__c.ASI_CRM_Type__c</field>
                <operation>equals</operation>
                <value>PSF</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Methodology__c</referenceTo>
        <relationshipLabel>KA Accounts (PSF Methodology (Module 3))</relationshipLabel>
        <relationshipName>KA_Accounts_PSF3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Unit_Mod1__c</fullName>
        <label>PSF Unit (Module 1)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_PSF_Volume_Base_Mod1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Std. Btl.</fullName>
                </value>
                <value>
                    <fullName>CR12 Extra Eqv.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Unit_Mod2__c</fullName>
        <label>PSF Unit (Module 2)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_PSF_Volume_Base_Mod2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Std. Btl.</fullName>
                </value>
                <value>
                    <fullName>CR12 Extra Eqv.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Unit_Mod3__c</fullName>
        <label>PSF Unit (Module 3)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_PSF_Volume_Base_Mod3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Std. Btl.</fullName>
                </value>
                <value>
                    <fullName>CR12 Extra Eqv.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Volume_Base_Mod1__c</fullName>
        <label>PSF Volume Base (Module 1)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Sub-Brand</fullName>
                </value>
                <value>
                    <fullName>By Grade</fullName>
                </value>
                <value>
                    <fullName>By Category</fullName>
                </value>
                <value>
                    <fullName>By Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Volume_Base_Mod2__c</fullName>
        <label>PSF Volume Base (Module 2)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Sub-Brand</fullName>
                </value>
                <value>
                    <fullName>By Grade</fullName>
                </value>
                <value>
                    <fullName>By Category</fullName>
                </value>
                <value>
                    <fullName>By Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Volume_Base_Mod3__c</fullName>
        <label>PSF Volume Base (Module 3)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Sub-Brand</fullName>
                </value>
                <value>
                    <fullName>By Grade</fullName>
                </value>
                <value>
                    <fullName>By Category</fullName>
                </value>
                <value>
                    <fullName>By Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Special_COA_Approval_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special COA Approval Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VEC_Methodology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Variable Event Cost Methodology</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Methodology__c.ASI_CRM_Type__c</field>
                <operation>equals</operation>
                <value>Variable Event Cost</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Methodology__c</referenceTo>
        <relationshipLabel>KA Accounts (Variable Event Cost Methodology)</relationshipLabel>
        <relationshipName>KA_Accounts_VEC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VEC_Unit__c</fullName>
        <label>Variable Event Cost Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_VEC_Volume_Base__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Std. Btl.</fullName>
                </value>
                <value>
                    <fullName>CR12 Extra Eqv.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_VEC_Volume_Base__c</fullName>
        <label>Variable Event Cost Volume Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Sub-Brand</fullName>
                </value>
                <value>
                    <fullName>By Grade</fullName>
                </value>
                <value>
                    <fullName>By Category</fullName>
                </value>
                <value>
                    <fullName>By Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>KA Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chi_Name__c</columns>
        <columns>ASI_CRM_English_Name__c</columns>
        <columns>ASI_CRM_Inactive__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KA Accounts</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Group</fullName>
        <active>true</active>
        <label>ASI CRM CN Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_KA_Account</fullName>
        <active>true</active>
        <label>CN KA Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_Local_Group_COA_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name = &quot;ASI CRM CN Group&quot;,
 ASI_CRM_Local_Group__c = TRUE,
 ASI_CRM_Special_COA_Approval_Flow__c = TRUE)</errorConditionFormula>
        <errorMessage>You cannot select Special COA Approval Flow if this is a local group KA Account.</errorMessage>
    </validationRules>
</CustomObject>